codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__astra_current_composer.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
assertion_line: 48
expression: rows
---
────────────────────────────────────────────────────────────
❯ Explore the night sky                                     
────────────────────────────────────────────────────────────
                                         100% context left
