codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__sparkle_fades_without_adding_dots_and_finishes_by_fifteen_seconds.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
assertion_line: 219
expression: "format!(\"before fade:\\n{}\\nfading:\\n{}\\nfinished:\\n{}\", text(&last),\ntext(&fading), text(&finished))"
---
before fade:
────────────────────────────────────────────────────────────────────────────────
❯ Ask Codex to do anything   ⠈     ⠈ ⠂    ⠁                                ⠂
────────────────────────────────────────────────────────────────────────────────
  ? for shortcuts                                            100% context left
fading:
────────────────────────────────────────────────────────────────────────────────
❯ Ask Codex to do anything   ⠈     ⠈ ⠂    ⠁
────────────────────────────────────────────────────────────────────────────────
  ? for shortcuts                                            100% context left
finished:
────────────────────────────────────────────────────────────────────────────────
❯ Ask Codex to do anything
────────────────────────────────────────────────────────────────────────────────
  ? for shortcuts                                            100% context left
